	  Removed Scanner and Backtesting functions. Perhaps redo in future.
	  Ported db functions to use sqlite for local db functions.
	  Quotes now managed by the user. Using qt4 sql functions to access quotes.
	  Indicators are now fully scripted using any compatible scripting language. See ExScript class.
	  Code overhaul and clean up performed. Many minor changes. Code simplification completed.

20090910: Added ability to add items to groups from group page. 

20090911: Made a little more space between plots and widget edges.

20090912: Removed Cycle chart object. This is better suited as an indicator.

	  Removed adjustForSplit() functions from chart objects. These are better suited for DataBase::

20090914: Folded all chart object classes into IndicatorPlot:: to remove the legacy plugin structure,
	  simplify and improve efficiency.

	  Removed BuyArrow, FiboLine, HorizontalLine, SellArrow, Text, TrendLine, VerticalLine COBase classes.

	  Added new CODialog class. This is the gui dialog to edit chart objects.

	  Applied patch (#2857550 - chars replacement in csv and progress indicator). Thanks to Austin (x_curve)
	  for the patch.
	  
	  Chart objects now display some values in the data panel when selected.

20090915: TODO done. When mouse cursor passes over a chart object, parms are displayed in the data panel.

	  ChartPage now saves last used symbol search and attempts to load that search on startup.

	  Fixed bug that segfaults when new indicator is added with no chart loaded.

	  Added new buy/sell lines to RSI and STOCH scripts.

	  Removed FileButton class. Not used anymore.

	  Added Config::IndicatorScriptDefault to the new indicator dialog. Got tired of typing in the long
	  script path.

	  Added SYMBOL fuction to ExScript class. Creates an array of close values of the given symbol (ticker).

20090917: Fixed Config to load defaults if none found.

	  Preferences dialog saves window size properly now.
